<?xml version="1.0"?>
<package format="2">
  <name>lab2pkg_py</name>
  <version>0.0.0</version>
  <description>The lab2pkg_py package</description>
  <license>MIT</license>
  <author email="cuihang1201@gmail.com">Hang Cui</author>
  <author email="weihang2@illinois.edu">Weihang Liang</author>
  <author email="songjiexiao@intl.zju.edu.cn">Songjie Xiao</author>
  <maintainer email="cuihang1201@gmail.com">Hang Cui</maintainer>
  <maintainer email="weihang2@illinois.edu">Weihang Liang</maintainer>
  <maintainer email="songjiexiao@intl.zju.edu.cn">Songjie Xiao</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ur_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>ur_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <export>
  </export>
</package>
